--- a/.tmux.conf
+++ b/.tmux.conf
@@ -3,12 +3,16 @@ set-option -g history-limit 100000
 
 # modern colors
 set -g default-terminal "tmux-256color"
-set -ga terminal-overrides ",alacritty:Tc"
 
 # unbind the prefix and bind it to Ctrl-a like screen
 unbind C-b
-set -g prefix C-a
-bind C-a send-prefix
+set -g prefix C-space
+bind C-space send-prefix
+
+# jump to marked
+bind \` switch-client -t'{marked}'
+
+
 
 # copy to X clipboard
 bind -T copy-mode-vi v send -X begin-selection
@@ -26,11 +30,25 @@ set -s escape-time 0
 set -g set-titles on
 set -g set-titles-string "#T"
 
+set-option -g status-style bg=default
+set-window-option -g window-status-current-style bold
+
+# tabs start at 1, renumber when one is closed
+set -g base-index 1
+setw -g pane-base-index 1
+set -g renumber-windows on
+
+
 # VIM mode
 set -g mode-keys vi
 
 # Mouse friendly
 set -g mouse on
+
+# open panes in current dir
+bind  c  new-window      -c "#{pane_current_path}"
+bind  %  split-window -h -c "#{pane_current_path}"
+bind '"' split-window -v -c "#{pane_current_path}"
 
 # Move between panes with vi keys
 bind h select-pane -L
