--- a/.tmux.conf
+++ b/.tmux.conf
@@ -4,14 +4,13 @@ set-option -g history-limit 100000
 # modern colors
 set -g default-terminal "tmux-256color"
 
-# unbind the prefix and bind it to Ctrl-a like screen
+# unbind the prefix and bind it to space
 unbind C-b
 set -g prefix C-space
 bind C-space send-prefix
 
 # jump to marked
 bind \` switch-client -t'{marked}'
-
 
 
 # copy to X clipboard
@@ -56,6 +55,10 @@ bind j select-pane -D
 bind k select-pane -U
 bind l select-pane -R
 
+
+bind Left swap-window -d -t -1
+bind Right swap-window -d -t +1
+
 ######################
 ### DESIGN CHANGES ###
 ######################
@@ -63,3 +66,4 @@ bind l select-pane -R
 # Avoid date/time taking up space
 set -g status-right ''
 set -g status-right-length 0
+
