add vim changes to tmux copy-mode

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -55,6 +55,11 @@ bind j select-pane -D
 bind k select-pane -U
 bind l select-pane -R
 
+# copy-mode vim changes
+bind-key -T copy-mode-vi L send-keys -X end-of-line
+bind-key -T copy-mode-vi H send-keys -X start-of-line
+
+
 
 bind Left swap-window -d -t -1
 bind Right swap-window -d -t +1
