tmux support for renmaing files

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -23,20 +23,19 @@ bind -T copy-mode-vi Enter send-keys -X cancel
 bind-key -nr C-y run "tmux show-buffer | xclip -in -selection clipboard &> /dev/null"
 
 # Avoid ESC delay
-set -s escape-time 0
+set -sg escape-time 0
 
 # Fix titlebar
 set -g set-titles on
-set -g set-titles-string "#T"
-
+set -g set-titles-string "#{window_name}" # TODO maybe make this better
 set-option -g status-style bg=default
 set-window-option -g window-status-current-style bold
+set-window-option -g automatic-rename on
 
 # tabs start at 1, renumber when one is closed
 set -g base-index 1
 setw -g pane-base-index 1
 set -g renumber-windows on
-
 
 # VIM mode
 set -g mode-keys vi
@@ -58,8 +57,6 @@ bind l select-pane -R
 # copy-mode vim changes
 bind-key -T copy-mode-vi L send-keys -X end-of-line
 bind-key -T copy-mode-vi H send-keys -X start-of-line
-
-
 
 bind Left swap-window -d -t -1
 bind Right swap-window -d -t +1
