--- a/.config/ghostty/config
+++ b/.config/ghostty/config
@@ -1,7 +1,6 @@
 #background = #111111
 theme = GruvboxDarkHard
 
-
 #font-family = MesloLGS NF Normal
 #font-family-bold = MesloLGS NF Bold
 #font-family-italic = MesloLGS NF Italic
@@ -9,8 +8,7 @@ theme = GruvboxDarkHard
 
 keybind = global:alt+space=toggle_quick_terminal
 
-
-copy-on-select = true
+copy-on-select = clipboard
 macos-titlebar-style = tabs
 shell-integration-features = no-cursor
 macos-option-as-alt = true
