--- a/.tmux.conf
+++ b/.tmux.conf
@@ -20,7 +20,7 @@ bind -T copy-mode-vi Enter send-keys -X cancel
 
 # shortcut for moving tmux buffer to clipboard
 # useful if you've selected with the mouse
-bind-key -nr C-y run "tmux show-buffer | xclip -in -selection clipboard &> /dev/null"
+bind -nr C-y run "tmux show-buffer | xclip -in -selection clipboard &> /dev/null"
 
 # Avoid ESC delay
 set -sg escape-time 0
@@ -55,8 +55,12 @@ bind k select-pane -U
 bind l select-pane -R
 
 # copy-mode vim changes
-bind-key -T copy-mode-vi L send-keys -X end-of-line
-bind-key -T copy-mode-vi H send-keys -X start-of-line
+bind -T copy-mode-vi L send-keys -X end-of-line
+bind -T copy-mode-vi H send-keys -X start-of-line
+
+# prefix + ctrl-u auto enters scroll mode (copy-mode -u)
+    # -e means if you scroll all the way down it auto exits copy mode
+bind u copy-mode -eu
 
 bind Left swap-window -d -t -1
 bind Right swap-window -d -t +1
