--- a/.tmux.conf
+++ b/.tmux.conf
@@ -1,6 +1,10 @@
 # set scroll history to 100,000 lines
 set-option -g history-limit 100000
 
+# do this so a login shell is not run every time.
+    # https://superuser.com/questions/968942/why-does-tmux-create-new-windows-as-login-shells-by-default
+set-option -g default-command "exec zsh"
+
 # modern colors
 set -g default-terminal "tmux-256color"
 
