use default shell in tmux

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -3,7 +3,7 @@ set-option -g history-limit 100000
 
 # do this so a login shell is not run every time.
     # https://superuser.com/questions/968942/why-does-tmux-create-new-windows-as-login-shells-by-default
-set-option -g default-command "exec zsh"
+set-option -g default-command "exec $SHELL"
 
 # modern colors
 set -g default-terminal "tmux-256color"
